--- a/myapp/templates/details.html
+++ b/myapp/templates/details.html
@@ -1,4 +1,3 @@
-<!-- templates/details.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,9 @@
     <title>Expense Details</title>
     <!-- Include Bootstrap CSS (you might need to adjust the path or use a CDN) -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Include jQuery and jQuery UI (you might need to adjust the paths or use CDNs) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <style>
         body {
             background-color: #f8f9fa;
@@ -40,17 +42,30 @@
             top: 10px;
             right: 10px;
         }
+        .user-details {
+            background-color: #2b00ff;
+            color: #fff;
+            padding: 2px;
+            border-radius: 2px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <a href="{% url 'logout' %}" class="btn btn-danger logout-btn">Logout</a>
+        
+        <!-- Display User Details -->
+        <div class="user-details">
+            <p>{{ user_data.username}}</p>
+        </div>
+
         <h2>Expense Details</h2>
         <form method="post" action="{% url 'details' %}">
             {% csrf_token %}
             <div class="form-group">
                 <label for="{{ form.date.id_for_label }}">Date:</label>
-                {{ form.date }}
+                <input type="text" id="{{ form.date.id_for_label }}" name="{{ form.date.name }}" value="{{ form.date.value|default:'' }}" class="datepicker" required>
             </div>
             <div class="form-group">
                 <label for="{{ form.amount.id_for_label }}">Amount:</label>
@@ -60,6 +75,10 @@
                 <label for="{{ form.mode.id_for_label }}">Mode:</label>
                 {{ form.mode }}
             </div>
+            <div class="form-group">
+                <label for="{{ form.reason.id_for_label }}">Reason:</label>
+                {{ form.reason }}
+            </div>
             <button type="submit">Save</button>
             <a href="{% url 'view_details' %}" class="btn btn-primary mt-3">View Details</a>
         </form>
@@ -68,5 +87,13 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $(".datepicker").datepicker({
+                dateFormat: 'yy-mm-dd', // Adjust the date format as needed
+                showButtonPanel: true
+            });
+        });
+    </script>
 </body>
 </html>
