--- a/myapp/templates/details.html
+++ b/myapp/templates/details.html
@@ -15,7 +15,7 @@
             padding: 20px;
         }
         .container {
-            max-width: 600px;
+            max-width: 1130px;
             margin: auto;
         }
         h2 {
@@ -48,6 +48,12 @@
             padding: 2px;
             border-radius: 2px;
             margin-bottom: 10px;
+        }
+        /* Added styles for horizontal alignment */
+        .form-group {
+            display: inline-block;
+            margin-right: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
